# Vietnam-weather-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: etl.yml
docs/architecture/: overview.md
docs/database/: data-cleanup.md  warehouse-design.md
docs/deployment/: guide.md
docs/etl/: automation.md  demo-runbook.md  flow.md
docs/powerbi/: guide.md
scripts/: github_actions_etl_report.py  load_historical.py  run_manual_catchup.ps1  seed_dim_date.py  seed_provinces.py
src/: __init__.py
src/api/: app.py  cli.py  dependencies.py
src/api/routes/: __init__.py  districts.py  health.py  (+2 more)
src/config/: settings.py
src/database/: models.py  session.py
src/etl/: cli.py  exceptions.py
src/models/: __init__.py
src/monitoring/: __init__.py  logging.py  notifications.py
src/repositories/: __init__.py  district_repository.py  province_repository.py  weather_repository.py
tests/api/: test_district_weather_routes.py  test_health.py  test_openapi_routes.py  test_province_weather_routes.py  test_weather_routes.py
tests/unit/: test_district_seed.py  test_etl_cli.py  test_forecast_cli.py  test_forecast_extractor.py  test_github_actions_etl_report.py  test_hourly_transformer.py  test_migration_downgrades.py  test_notifications.py  test_open_meteo_batch.py  test_province_seed.py  test_seed_dim_date.py  test_settings.py  test_weather_pipeline_batch.py  test_weather_transformer.py  test_weather_validation.py
(+24 files in other folders)
